// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.train() create a new version 2`] = `
[
  {
    "intentBatchInline": {
      "intents": [
        {
          "displayName": "hello",
          "name": undefined,
          "trainingPhrases": [
            {
              "parts": [
                {
                  "text": "hello",
                },
              ],
            },
            {
              "parts": [
                {
                  "text": "hi",
                },
              ],
            },
          ],
        },
        {
          "displayName": "goodBye",
          "name": undefined,
          "trainingPhrases": [
            {
              "parts": [
                {
                  "text": "bye",
                },
              ],
            },
            {
              "parts": [
                {
                  "text": "see ya",
                },
              ],
            },
          ],
        },
      ],
    },
    "languageCode": "en",
    "parent": "projects/test/agent",
  },
]
`;

exports[`.train() create a new version 3`] = `
[
  {
    "intentBatchInline": {
      "intents": [
        {
          "displayName": "hello",
          "name": "projects/test/agent/intents/_ID_OF_HELLO_",
          "trainingPhrases": [
            {
              "parts": [
                {
                  "text": "こんにちは",
                },
              ],
            },
            {
              "parts": [
                {
                  "text": "おはよう",
                },
              ],
            },
          ],
        },
        {
          "displayName": "goodBye",
          "name": "projects/test/agent/intents/_ID_OF_GOODBYE_",
          "trainingPhrases": [
            {
              "parts": [
                {
                  "text": "さようなら",
                },
              ],
            },
          ],
        },
      ],
    },
    "languageCode": "ja",
    "parent": "projects/test/agent",
  },
]
`;

exports[`.train() start from empty project 3`] = `
[
  {
    "intentBatchInline": {
      "intents": [
        {
          "displayName": "hello",
          "name": undefined,
          "trainingPhrases": [
            {
              "parts": [
                {
                  "text": "hello",
                },
              ],
            },
            {
              "parts": [
                {
                  "text": "hi",
                },
              ],
            },
          ],
        },
        {
          "displayName": "goodBye",
          "name": undefined,
          "trainingPhrases": [
            {
              "parts": [
                {
                  "text": "bye",
                },
              ],
            },
            {
              "parts": [
                {
                  "text": "see ya",
                },
              ],
            },
          ],
        },
      ],
    },
    "languageCode": "en",
    "parent": "projects/test/agent",
  },
]
`;

exports[`.train() start from empty project 4`] = `
[
  {
    "intentBatchInline": {
      "intents": [
        {
          "displayName": "hello",
          "name": "projects/test/agent/intents/_ID_OF_HELLO_",
          "trainingPhrases": [
            {
              "parts": [
                {
                  "text": "こんにちは",
                },
              ],
            },
            {
              "parts": [
                {
                  "text": "おはよう",
                },
              ],
            },
          ],
        },
        {
          "displayName": "goodBye",
          "name": "projects/test/agent/intents/_ID_OF_GOODBYE_",
          "trainingPhrases": [
            {
              "parts": [
                {
                  "text": "さようなら",
                },
              ],
            },
          ],
        },
      ],
    },
    "languageCode": "ja",
    "parent": "projects/test/agent",
  },
]
`;
